[package]
name = "playground"
version = "0.1.0"
authors = ["Laurent Wouters <lwouters@cenotelie.fr>"]
description = "Execute playground samples"
repository = "https://github.com/cenotelie-training/rust-module-205"
license = "MIT"
edition = "2021"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
anyhow = "1"
bytes = "1.6"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
wasmtime = "21.0"
wasmtime-wasi = "21.0"
axum = { version = "0.7", features = ["ws"] }
